// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with Label 1`] = `
<div
  className="sc-AxirZ fSNuUs"
>
  <div
    className="sc-AxjAm eMwonu"
    type="primary"
  >
    test label
  </div>
  <input
    className="sc-AxiKw ckEfbS"
    type="text"
  />
</div>
`;

exports[`renders correctly with props 1`] = `
<div
  className="sc-AxirZ fSNuUs"
>
  <div
    className="sc-AxjAm eMwonu"
    type="primary"
  />
  <input
    className="sc-AxiKw ckEfbS"
    type="text"
  />
</div>
`;

exports[`renders correctly with props 2`] = `
<div
  className="sc-AxirZ fSNuUs"
>
  <div
    className="sc-AxjAm eMwonu"
    type="primary"
  >
    test props
  </div>
  <input
    className="sc-AxiKw gMeQUp"
    onChange={[Function]}
    type="text"
    value="test value"
  />
</div>
`;
